# hashbuf

./: .gitignore  NATIVE_BLAKE3_PLAN.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
rust/: Cargo.toml
rust/blake3/: Cargo.toml
rust/blake3/src/: lib.rs
rust/sha256/: Cargo.toml  build.zsh
rust/sha256/src/: lib.rs
