[package]
name = "hashbuf_sha256"
description = "SHA-256 hash and HMAC-SHA256 with streaming support, compiled to WASM."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]

[dependencies]
sha2 = "0.10"
hmac = "0.12"

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dev-dependencies]
hex = "0.4"
